# pokered

./: .gitignore  AGENTS.md  CMakeLists.txt
.agent/: EXECPLAN.md  PLANS.md  state.json
.agent/wiki/: asset-pipeline.md  battle.md  build-oracle.md  data-model.md  decisions.md  index.md  log.md  overworld.md  repo-map.md  runtime-architecture.md  scripting.md  verification.md
cmake/: GenerateBinaryHeader.cmake  GenerateBluesHouseMetadata.cmake  GenerateOaksLabMetadata.cmake  GeneratePalletTownMetadata.cmake  GeneratePewterSpeechHouseMetadata.cmake  GenerateRedsHouse1FMetadata.cmake  GenerateRedsHouse2FMetadata.cmake  GenerateRoute1Metadata.cmake
native/include/pokered/app/: application.hpp
native/include/pokered/core/: game_state.hpp
native/include/pokered/oracle/: map_file.hpp  provenance.hpp  symbol_file.hpp
native/include/pokered/save/: save_system.hpp
native/include/pokered/ui/: bitmap_font.hpp
native/include/pokered/world/: map_data.hpp  world_logic.hpp
native/src/: main.cpp
native/src/app/: application.cpp
native/src/core/: game_state.cpp
native/src/oracle/: map_file.cpp  provenance.cpp  symbol_file.cpp
native/src/save/: save_system.cpp
native/src/ui/: bitmap_font.cpp
native/src/world/: map_data.cpp  world_logic.cpp
native/tests/: save_system_tests.cpp
